Fixes width overflow

--- a/less/endowment.less
+++ b/less/endowment.less
@@ -33,8 +33,7 @@ body { font-family: @default-font;
                   top: 0;
                   left: 0;
                   min-width: 100%;
-                  min-height: 100%;
-                  overflow: hidden;
+                  overflow-x: hidden;
                   opacity: 0.8;
                   -webkit-filter: blur(5px);
                      -moz-filter: blur(5px);
